Buildable checkpoint, server replaces grpc-api